<resources>
    <string-array name="foodCategory">
    <item>Soup</item>
    <item>Appetizer</item>
    <item>Salad</item>
    <item>Desserts</item>
    <item>Pastry</item>
    <item>Main Meals</item>
    </string-array>

    <string name="app_name">DGrubuOdev2</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="forgot_your_password"><u>Forgot Your Password?</u></string>
    <string name="login">Login</string>
    <string name="find_your_favorite_food">Find Your \nFavorite Recipe</string>
    <string name="what_do_you_want_to_order">What do you want to recipe?</string>
    <string name="special_deal_for_october">Special Deal For \nOctober</string>
    <string name="buy_now">Buy Now</string>
    <string name="nearest_restaurant">Nearest Restaurant</string>
    <string name="view_more">View More</string>
    <string name="popular_menu">Popular Menu</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="chat">Chat</string>
    <string name="tamam">Tamam</string>
    <string name="see_reviews"><u>See Reviews</u></string>
    <string name="kcal">Kcal:</string>
    <string name="ingredients">Ingredients</string>
    <string name="kcalValue">564</string>
    <string name="reviewNumber">(30+)</string>
    <string name="score">4.5</string>
    <string name="foodName">Profiteroles</string>
    <string name="foodIngredients">50g butter (preferably unsalted), cut into cubes 2 tbsp caster sugar 75g strong white flour, sifted with a pinch of fine sea salt 2 eggs, lightly beaten 300ml double cream few drops vanilla extract</string>
    <string name="directions">Directions</string>
    <string name="edit_recipe">Edit</string>
    <string name="delete_recipe">Delete</string>
    <string name="atla">Atla</string>
    <string name="kcal2">Kcal</string>
    <string name="score2">Score</string>
    <string name="food_name2">Food Name</string>
    <string name="save">Save</string>
    <string name="username">username</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="don_t_have_an_account_register">Don’t have an account?<annotation font="">Register</annotation> </string>
    <string name="recipe">Recipe</string>
    <string name="personal_information">Personal information</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="log_out">Log out</string>
    <string name="Add">add</string>
    <string name="food_category">Food Category</string>
    <string name="cookingtime">Cooking Time</string>
    <string name="soup">Soup</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="desserts">Desserts</string>
    <string name="pastry">Pastry</string>
    <string name="main_meals">Main Meals</string>
    <string name="all_recipe">All Recipe</string>
</resources>