<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="360dp"
        android:layout_height="220dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/foodImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                android:src="@drawable/profiterol"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/backNavImageView"
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:layout_marginStart="-24dp"
                android:src="@drawable/ic_backnavicon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/likeIconImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_likeicon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/space_12"
                android:layout_marginEnd="@dimen/space_4"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/foodNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sofiaprosemibold"
        android:text="@string/foodName"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ImageView
        android:id="@+id/starIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_staricon"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/foodNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/foodNameTextView" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:fontFamily="@font/sofiaprosemibold"
        android:text="@string/score"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/starIconImageView"
        app:layout_constraintStart_toEndOf="@+id/starIconImageView"
        app:layout_constraintTop_toTopOf="@+id/starIconImageView" />

    <TextView
        android:id="@+id/reviewNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sofiaprosemibold"
        android:text="@string/reviewNumber"
        android:textSize="18sp"
        android:textColor="#9796A1"
        android:layout_marginStart="@dimen/space_8"
        app:layout_constraintBottom_toBottomOf="@+id/scoreTextView"
        app:layout_constraintStart_toEndOf="@+id/scoreTextView"
        app:layout_constraintTop_toTopOf="@+id/scoreTextView" />

    <TextView
        android:id="@+id/seeReviewsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sofiaprosemibold"
        android:text="@string/see_reviews"
        android:textColor="#4EE476"
        android:textSize="18sp"
        android:layout_marginStart="@dimen/space_18"
        app:layout_constraintBottom_toBottomOf="@+id/reviewNumberTextView"
        app:layout_constraintStart_toEndOf="@+id/reviewNumberTextView"
        app:layout_constraintTop_toTopOf="@+id/reviewNumberTextView" />


    <TextView
        android:id="@+id/kcalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sofiaprosemibold"
        android:text="@string/kcal"
        android:textSize="18sp"
        android:layout_marginEnd="64dp"
        app:layout_constraintBottom_toBottomOf="@+id/foodNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foodNameTextView" />


    <TextView
        android:id="@+id/kcalValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sofiaprosemibold"
        android:text="@string/kcalValue"
        android:layout_marginStart="@dimen/space_8"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/kcalTextView"
        app:layout_constraintStart_toEndOf="@+id/kcalTextView"
        app:layout_constraintTop_toTopOf="@+id/kcalTextView" />

    <TextView
        android:id="@+id/ingredientsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ingredients"
        android:fontFamily="@font/sofiaprosemibold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/foodNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/scoreTextView" />


    <TextView
        android:id="@+id/ingredientsDetailsTextView"
        android:layout_width="360dp"
        android:layout_height="90dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/sofiaprosemibold"
        android:scrollbars="vertical"
        android:text="@string/foodIngredients"
        app:layout_constraintStart_toStartOf="@+id/ingredientsTextView"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsTextView" />

    <TextView
        android:id="@+id/directionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/sofiaprosemibold"
        android:text="@string/directions"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/ingredientsDetailsTextView"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsDetailsTextView" />


    <TextView
        android:id="@+id/directionsDetailsTextView"
        android:layout_width="360dp"
        android:layout_height="90dp"
        android:fontFamily="@font/sofiaprosemibold"
        android:text=""
        android:layout_marginTop="12dp"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="@+id/directionsTextView"
        app:layout_constraintTop_toBottomOf="@+id/directionsTextView" />

    <Button
        android:id="@+id/editButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:backgroundTint="#4EE476"
        android:text="@string/edit_recipe"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        android:layout_marginTop="16dp"
        app:icon="@drawable/ic_editicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directionsDetailsTextView"
        app:strokeColor="#34A853" />

    <Button
        android:id="@+id/deleteButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="#4EE476"
        android:text="@string/delete_recipe"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        android:layout_marginTop="16dp"
        app:icon="@drawable/ic_deleteicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directionsDetailsTextView"
        app:strokeColor="#34A853" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>