<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.ProfileFragment">

            <ImageView
                android:id="@+id/iv_profile_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/bg_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/space_130"
                android:layout_height="@dimen/space_130"
                android:src="@drawable/ic_camera"
                app:civ_border_color="@color/orange"
                app:civ_border_width="@dimen/space_2"
                app:layout_constraintBottom_toBottomOf="@id/iv_profile_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_20"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/profile_image"
                app:layout_constraintStart_toStartOf="@id/profile_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_20"
                android:layout_marginTop="@dimen/space_12"
                android:text="@string/personal_information"
                android:textColor="@color/black_1"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_profile_bg" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_20"
                android:layout_marginTop="@dimen/space_12"
                android:hint="@string/name"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/iv_name_pen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_12"
                android:src="@drawable/ic_pen"
                app:layout_constraintBottom_toBottomOf="@id/et_name_title"
                app:layout_constraintEnd_toEndOf="@id/et_name_title"
                app:layout_constraintTop_toTopOf="@id/et_name_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_email_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_20"
                android:layout_marginTop="@dimen/space_12"
                android:hint="@string/email"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/iv_email_pen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_12"
                android:src="@drawable/ic_pen"
                app:layout_constraintBottom_toBottomOf="@id/et_email_title"
                app:layout_constraintEnd_toEndOf="@id/et_email_title"
                app:layout_constraintTop_toTopOf="@id/et_email_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_20"
                android:layout_marginTop="@dimen/space_12"
                android:hint="@string/password"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_confirm_password_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_20"
                android:layout_marginTop="@dimen/space_12"
                android:hint="@string/confirm_password"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_20"
                android:layout_marginTop="@dimen/space_12"
                android:background="@drawable/bg_button_buy"
                android:text="@string/update"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_confirm_password_title" />

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_update"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginVertical="@dimen/space_12"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>